// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OcTile component > renders default space correctly 1`] = `
"<div class="oc-tile-card oc-card flex flex-col bg-role-surface-container hover:bg-role-surface-container-highest">
  <resource-link-stub resource="[object Object]" isresourceclickable="true" class="oc-card-media-top flex justify-center items-center m-0" tabindex="-1">
    <div class="oc-tile-card-selection"></div>
    <!--v-if-->
    <div class="oc-tile-card-preview flex items-center justify-center text-center">
      <resource-icon-stub resource="[object Object]" size="xlarge" class="tile-default-image pt-1"></resource-icon-stub>
    </div>
  </resource-link-stub>
  <div class="oc-card-body p-2">
    <div class="flex justify-between items-center">
      <div class="flex items-center truncate resource-name-wrapper text-role-on-surface">
        <resource-list-item-stub resource="[object Object]" pathprefix="" ispathdisplayed="false" parentfoldername="" parentfolderlinkiconadditionalattributes="[object Object]" isextensiondisplayed="true" isthumbnaildisplayed="true" isicondisplayed="false" isresourceclickable="true"></resource-list-item-stub>
      </div>
      <div class="flex items-center">
        <!-- Slot for indicators !-->
        <!-- Slot for individual actions -->
        <!-- Slot for contextmenu -->
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`OcTile component > renders disabled space correctly 1`] = `
"<div class="oc-tile-card oc-card flex flex-col bg-role-surface-container hover:bg-role-surface-container-highest oc-tile-card-disabled">
  <resource-link-stub resource="[object Object]" isresourceclickable="true" class="oc-card-media-top flex justify-center items-center m-0" tabindex="-1">
    <div class="oc-tile-card-selection"></div>
    <!--v-if-->
    <div class="oc-tile-card-preview flex items-center justify-center text-center">
      <resource-icon-stub resource="[object Object]" size="xlarge" class="tile-default-image pt-1"></resource-icon-stub>
    </div>
  </resource-link-stub>
  <div class="oc-card-body p-2">
    <div class="flex justify-between items-center">
      <div class="flex items-center truncate resource-name-wrapper text-role-on-surface">
        <resource-list-item-stub resource="[object Object]" pathprefix="" ispathdisplayed="false" parentfoldername="" parentfolderlinkiconadditionalattributes="[object Object]" isextensiondisplayed="true" isthumbnaildisplayed="true" isicondisplayed="false" isresourceclickable="true"></resource-list-item-stub>
      </div>
      <div class="flex items-center">
        <!-- Slot for indicators !-->
        <!-- Slot for individual actions -->
        <!-- Slot for contextmenu -->
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;
